--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
+.idea
+bx24_settings.py
+bx24_tokens
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
-.idea
+
 # C extensions
 *.so
-
 # Distribution / packaging
 .Python
 build/
