--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,21 @@
+`astroid==1.6.5
+backports.functools-lru-cache==1.5
 certifi==2018.8.24
 chardet==3.0.4
+colorama==0.4.0
+configparser==3.5.0
+enum34==1.1.6
+flake8==3.6.0
+futures==3.2.0
 idna==2.7
+isort==4.3.4
+lazy-object-proxy==1.3.1
+mccabe==0.6.1
+pycodestyle==2.4.0
+pyflakes==2.0.0
 python-dateutil==2.7.3
 requests==2.19.1
+singledispatch==3.4.0.3
 six==1.11.0
 urllib3==1.23
+wrapt==1.10.11
